[package]
name = "cycle"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.87"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
futures = "0.3.30"
serde = { version = "1.0.210", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["chrono", "mysql", "runtime-tokio"] }
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
